--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@prisma/client": "^5.20.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
