--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@prisma/client": "^5.20.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18",
-    "zod": "^3.23.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
